# WTD_2

./: .claudeignore  .cursorignore  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  00_MASTER_ARCHITECTURE.md  03_SEARCH_ENGINE.md  04_AI_AGENT_LAYER.md  05_VISUALIZATION_ENGINE.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DOCS_COMPREHENSIVE_ANALYSIS.md  DOCS_FINAL_STRUCTURE.md  EXECUTE_DOCS_REORGANIZATION.sh  FILE_CLASSIFICATION_PLAN.md  FINAL_DOCS_REORGANIZATION_MASTER.md  OKXDATA_INTEGRATION_SUMMARY.md  README.md  ROUTE_MIGRATION_ANALYSIS.md  W0109_COMPLETION_REPORT.md  cloudbuild.app.yaml  cloudbuild.engine.yaml  cloudbuild.worker.yaml  cloudbuild.yaml  demo_okx_historical.py  demo_okx_mock.py  demo_okx_pattern_correlation.py  docker-compose.dev.yml  docker-compose.yml  exceptions.py  final_validation_w0109.py  main_pointer.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  svelte.config.js  (+2 more)
engine/: .gitignore  .importlinter  Dockerfile  Dockerfile.worker  ENGINE_SPEC.md  autoresearch_ml.py  autoresearch_real_data.py  env_bootstrap.py  pipeline.py  pipeline_stages.py  pyproject.toml  sector_map.py  security_runtime.py  train_lgbm.py
engine/agents/: __init__.py  context.py  conversation.py  external_enrichment.py  judge_runtime.py  live_snapshot.py  llm_runtime.py  quota.py  save_runtime.py  tier.py
engine/alpha/: __init__.py  composite_score.py  scroll_segment.py  scroll_similar_compose.py  universe_seed.py
engine/api/: limiter.py  main.py  schemas.py  schemas_backtest.py  schemas_challenge.py  schemas_extreme_event.py  schemas_memory.py  schemas_opportunity.py  schemas_pattern_draft.py  schemas_rag.py  schemas_runtime.py  schemas_score.py  schemas_search.py  schemas_shared.py  schemas_train_deep_universe.py  score_cache.py
engine/backtest/: __init__.py  audit.py  calibration.py  config.py  simulator.py
engine/branding/: __init__.py  analysis_compare.py  kol_style_engine.py  pnl_renderer.py  sns_poster.py
engine/building_blocks/: __init__.py
engine/cache/: http_client.py  kline_cache.py  market_search_cache.py
engine/capture/: __init__.py  store.py  token.py  types.py
engine/challenge/: historical_matcher.py  pattern_refiner.py  types.py
engine/copy_trading/: __init__.py  leader_score.py  leaderboard.py
engine/core_loop/: __init__.py  builder.py  contracts.py  ports.py  spine.py
engine/data/: parquet_provider.py
engine/data_cache/: __init__.py  backfill.py  backfill_async.py  binance_credentials.py  coinalyze_credentials.py  fetch_aggtrades.py  fetch_alpha_universe.py  fetch_binance.py  fetch_binance_liquidations.py  fetch_binance_perp.py  fetch_bscscan.py  fetch_cme_cot.py  fetch_coinalyze_liquidations.py  fetch_coinalyze_oi.py  fetch_coinbase.py  fetch_deribit_options.py  fetch_dexscreener.py  fetch_etf_flow.py  fetch_exchange_oi.py  fetch_macro.py  fetch_multi_exchange.py  fetch_okx_historical.py  fetch_okx_smart_money.py  fetch_onchain.py  fetch_orderbook_depth.py  fetch_sector_momentum.py  fetch_social.py  fetch_upbit.py  fetch_venue_funding.py  freshness.py  indicator_calc.py  liquidation_windows.py  loader.py  market_db.py  market_search.py  multi_exchange_backfill.py  parquet_store.py  raw_ingest.py  raw_store.py  registry.py  (+3 more)
engine/db/: __init__.py  migrate.py
engine/features/: __init__.py  canonical_pattern.py  columns.py  compute.py  corpus_bridge.py  dex_ratios.py  gex_pressure.py  helpers.py  materialization.py  materialization_store.py  primitives.py  registry.py
engine/indicators/: cache.py  catalog_export.json  compute.py  registry.py
engine/jobs/: db_health_check.py  refresh_streak_matview.py
engine/labels/: label_generator.py  verbalizer.py
engine/ledger/: __init__.py  backfill_4table.py  dataset.py  store.py  supabase_record_store.py  supabase_store.py  types.py
engine/llm/: __init__.py  _supabase.py  cost_tracker.py  pricing.py  provider.py  router.py
engine/market_engine/: __init__.py  config.py  ctx_cache.py  fact_plane.py  fact_read_models.py  indicator_catalog.py  l0_context.py  pipeline.py  sector.py  (+3 more)
(+6795 files in other folders)
