[project]
name = "cogochi-autoresearch"
version = "0.1.0"
description = "Shared models and feature calculators for the Cogochi LoRA pipeline (Track A) and the pattern-scanner swarm challenge (Track B)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "lightgbm[apple]>=4.6.0",
    "scikit-learn>=1.8.0",
    "httpx>=0.27",
    "uvicorn>=0.44.0",
    "fastapi>=0.135.3",
    "apscheduler>=3.11.2",
    "redis[asyncio]>=4.6",
    "slowapi>=0.1.9",
    "twitter-plugin-gamesdk>=0.2.11",
    "pillow>=12.2.0",
    "supabase>=2.0",
    "PyJWT[cryptography]>=2.8",
    "memkraft>=1.0.1",
    "anthropic>=0.25",
    "litellm>=1.40.0",
    "duckdb>=1.0",
    "pyarrow>=14.0",
    "sentry-sdk[fastapi]>=2.0",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
]

[project.scripts]
research-cli = "research.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests", "research/validation"]
pythonpath = [".", ".."]
asyncio_mode = "auto"
markers = [
    "e2e: real LLM / external service calls, opt-in only (set DISCOVERY_AGENT_ENABLED=true)",
    "integration: requires live Supabase connection",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
